--- a/workflow/envs/parafly.yml
+++ b/workflow/envs/parafly.yml
@@ -1,7 +1,6 @@
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
-channel_priority: strict
 dependencies:
-  - phyloflash=3.3b1
+  - parafly
