--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -1,9 +1,9 @@
 falcon-comb_LmagMIC:
-  ref_orig:
+  ref_orig: # Original reference genome assembly
     /ebio/abt2_projects/ag-swart-loxodes/assembly/falcon-comb_LmagMIC/scaffolds.fasta
-  ref_intronless_masked:
+  ref_intronless_masked: # Intronless assembly produced by Intronarrator
     /ebio/abt2_projects/ag-swart-loxodes/annotation/falcon-comb_LmagMIC/intronarrator/falcon-comb_LmagMIC.0.2.minus_introns.ncRNA_hard_masked.fa
-  realtrons_gff:
+  realtrons_gff: # Intron annotation GFF3 file produced by intronarrator
     /ebio/abt2_projects/ag-swart-loxodes/annotation/falcon-comb_LmagMIC/intronarrator/all.realtrons.0.2.noalt.gff
-  trf_min1000:
+  trf_min1000: # Low-complexity sequence annotation GFF3
     /ebio/abt2_projects/ag-swart-loxodes/annotation/falcon-comb_LmagMIC/trf/falcon-comb_LmagMIC.trf.no_overlap.min1000.merge.bed
